--- a/pom.xml
+++ b/pom.xml
@@ -19,6 +19,8 @@
         <module>config-server-git</module>
         <module>config-client</module>
         <module>eureka-consumer-ribbon-hystrix</module>
+        <module>hystrixDashboard</module>
+        <module>api-gateway</module>
     </modules>
 
 
